fix: gap

--- a/src/app/shared/components/modal/modal.component.css
+++ b/src/app/shared/components/modal/modal.component.css
@@ -14,6 +14,7 @@
 .modal {
   display: flex;
   flex-direction: column;
+  gap: 8px;
   background-color: var(--modal-background);
   max-width: 100vw;
   height: fit-content;
